--- a/Präsentation/index.html
+++ b/Präsentation/index.html
@@ -13,8 +13,9 @@
     
     <link rel="shortcut icon" href="favicon.png" />
 	
-	<script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
-</script>
+	<script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+	<!-- Falls kein Internet verfügbar... -->
+	<script type="text/javascript" async src="../../../MathJax/MathJax.js?config=TeX-AMS_HTML-full"></script>
 </head>
 
 <body class="impress-not-supported">
@@ -24,13 +25,13 @@
     <p>For the best experience please use the latest <b>Chrome</b>, <b>Safari</b> or <b>Firefox</b> browser.</p>
 </div>
 
-<div style="position:absolute; width:19%; right:0px; background-color:#000000; height:100%; ">
+<div style="position:absolute; width:19%; left:0px; background-color:#000000; height:100%; ">
 	<div id="ueberblick">Hier erscheint ab sofort ein Überblick! <br />
 		\[\frac{3\cdot 7}{\sqrt{5}}=:x\]
 	</div>
 </div>
 
-<div style="position:relative; left:0px; width:80%; height:95%; overflow:hidden; border:2px solid #000000;">
+<div style="position:absolute; right:0px; width:80%; height:100%; overflow:hidden; border:2px solid #000000;" class="impress-bereich">
 <div id="impress">
 
     <div id="bored" class="step slide" data-x="-1000" data-y="-1500">
@@ -39,6 +40,10 @@
 			<li class="substep">Substep-Test1</li>
 			<li class="substep">Und Punkt Nr. 2</li>
 		</ul>
+		
+		<p class="substep">Test-Absatz</p>
+		
+		<p class="substep">Hallo, dies ist ein <span class="substep">Test-Span</span>!</span>
     </div>
 
     <!--
