--- a/Präsentation/index.html
+++ b/Präsentation/index.html
@@ -25,7 +25,7 @@
     <p>For the best experience please use the latest <b>Chrome</b>, <b>Safari</b> or <b>Firefox</b> browser.</p>
 </div>
 
-<div style="position:absolute; width:24%; left:0px; background-color:#000000; height:100%; ">
+<div class="sidebar-container" style="position:absolute; width:24%; left:0px; background-color:#000000; height:100%;">
 	<div id="sidebar"><div id="sidebar-content" style="padding:15px;">
 		<div id="ueberblick">Hier erscheint ab sofort ein Überblick! <br />
 			\[\frac{3\cdot 7}{\sqrt{5}}=:x\]
@@ -33,26 +33,37 @@
 	</div></div>
 </div>
 
-<div style="position:absolute; right:0px; width:75%; height:100%; overflow:hidden;" class="impress-bereich">
+<div style="position:absolute; right:0px; width:75%; height:100%; overflow:hidden;" class="impress-container">
 <div id="impress">
 
-	<div id="TitlePage" class="step" data-x="-2000" data-y="0">
-		<div style="width:1100px; height:200px; background-color:#ABCDEF; position:relative; left:-100px; top:-100px;"></div>
-		<h1>Capacitated Vehicle Routing with Non-Uniform Speeds</h1>
-	</div>
-
-	<div id="Definitions" class="step" data-x="-1000" data-y="0">
-		<h2>Problem-Definitionen</h2>
-		<div class="substep" style="margin:auto; width:50%;">
-			<h3>(metrisches) TSP</h3>
+	<div id="TitlePage" class="step" data-x="-750" data-y="180" data-scale=".5">
+		<div style="width:1100px; height:200px; background:linear-gradient(to right, #3333B2, #000000); position:absolute; left:-100px; top:-100px; box-shadow: 10px 10px 8px #868686;" class="TeXFake"></div>
+		<div class="problem" style="margin:150px auto 50px auto; width:80%; ">
+			<h1>Capacitated Vehicle Routing<br />with Non-Uniform Speeds</h1>
 		</div>
-		Hallo <br />
-		dies ist ein <br />
-		<strong>Testtext</strong><br />
-		<br />
-		Viele Zeilen<br />
-		Noch mehr Zeilen<br />
-		Ende!
+		
+		<div style="text-align:center; font-size:70%;" class="TeXFake">
+			basierend auf dem gleichnamigen Paper (2010) von <br /> Inge Li Gørtz, Marco Molinaro, Viswanath Nagarajan und R. Ravi 
+		</div>
+		
+		<div style="width:1100px; height:50px; position:absolute; left:-100px; bottom:-20px; display:table; table-layout: fixed;" class="TeXFake">
+		<div style="width:33%; background-color:#000000; color:#FFFFFF; text-align:right; font-size:55%; padding:10px 30px; font-weight:bold; display:table-cell;">Lukas Graf</div>
+		<div style="background-color:#3333B2; color:#FFFFFF; text-align:left; font-size:55%; padding:10px 30px; font-weight:bold; display:table-cell;">Seminar: Spieltheorie und Approximationsalgorithmen</div>
+		</div>
+	</div>
+	
+	<div id="Problems" class="step" data-x="-1000" data-y="0">
+		<h2>Problem-Definitionen</h2>
+		<div class="problem substep" style="transform:scale(.5); width:50%; margin:auto;">
+			<h1>(Metrisches) TSP</h1>
+		</div>
+		<div class="substep" style="margin:auto; font-size:70%; width:40%;">
+			<ul>
+				<li>Orte \(V, |V| < \infty\)</li>
+				<li>Metrik \(d: V\times V \to \mathbb{R}_{\geq 0}\)</li>
+			</ul>
+		</div>
+			
 	</div>
 
 	<div id="Algorithm-Overview" class="step" data-x="0" data-y="0">
@@ -82,7 +93,7 @@
 				
 	</div>
 	
-    <div id="overview" class="step" data-x="-500" data-y="600" data-scale="4" data-rotate-x="-20">
+    <div id="overview" class="step" data-x="-500" data-y="100" data-scale="1.7" data-rotate-x="-20">
     </div>
 
 </div>
