--- a/Präsentation/index.html
+++ b/Präsentation/index.html
@@ -27,8 +27,8 @@
 
 <div class="sidebar-container" style="position:absolute; width:24%; left:0px; background-color:#000000; height:100%;">
 	<div id="sidebar"><div id="sidebar-content" style="padding:15px;">
-		<div id="ueberblick">Hier erscheint ab sofort ein Überblick! <br />
-			\[\frac{3\cdot 7}{\sqrt{5}}=:x\]
+		<div class="problem" style="width:80%; margin:auto;">
+			<h1>(Metrisches) TSP</h1>
 		</div>
 	</div></div>
 </div>
@@ -38,7 +38,7 @@
 
 	<div id="TitlePage" class="step" data-x="-750" data-y="180" data-scale=".5">
 		<div style="width:1100px; height:200px; background:linear-gradient(to right, #3333B2, #000000); position:absolute; left:-100px; top:-100px; box-shadow: 10px 10px 8px #868686;" class="TeXFake"></div>
-		<div class="problem" style="margin:150px auto 50px auto; width:80%; ">
+		<div class="problem TeXFakeShadow" style="margin:150px auto 50px auto; width:80%; ">
 			<h1>Capacitated Vehicle Routing<br />with Non-Uniform Speeds</h1>
 		</div>
 		
