--- a/Präsentation/index.html
+++ b/Präsentation/index.html
@@ -25,7 +25,7 @@
     <p>For the best experience please use the latest <b>Chrome</b>, <b>Safari</b> or <b>Firefox</b> browser.</p>
 </div>
 
-<div class="sidebar-container" style="position:absolute; width:24%; left:0px; background-color:#000000; height:100%;">
+<div class="sidebar-container" style="position:absolute; width:0%; left:0px; background-color:#000000; height:100%;">
 	<div id="sidebar"><div id="sidebar-content" style="padding:15px;">
 		<div class="problem" style="width:80%; margin:auto;">
 			<h1>(Metrisches) TSP</h1>
@@ -33,26 +33,26 @@
 	</div></div>
 </div>
 
-<div style="position:absolute; right:0px; width:75%; height:100%; overflow:hidden;" class="impress-container">
+<div style="position:absolute; right:0px; width:100%; height:100%; overflow:hidden;" class="impress-container">
 <div id="impress">
 
-	<div id="TitlePage" class="step" data-x="-750" data-y="180" data-scale=".5">
-		<div style="width:1100px; height:200px; background:linear-gradient(to right, #3333B2, #000000); position:absolute; left:-100px; top:-100px; box-shadow: 10px 10px 8px #868686;" class="TeXFake"></div>
-		<div class="problem TeXFakeShadow" style="margin:150px auto 50px auto; width:80%; ">
-			<h1>Capacitated Vehicle Routing<br />with Non-Uniform Speeds</h1>
+	<div id="TitlePage" class="step" data-x="-950" data-y="180" data-scale=".5">
+		<div style="width:1350px; height:200px; background:linear-gradient(to right, #3333B2, #000000); position:absolute; left:-60px; top:-100px; box-shadow: 10px 10px 8px #868686;" class="TeXFake"></div>
+		<div class="problem TeXFakeShadow" style="margin:150px auto 50px auto; width:60%; ">
+			<h1>Heterogenes k-CVRP</h1>
 		</div>
 		
 		<div style="text-align:center; font-size:70%;" class="TeXFake">
 			basierend auf dem gleichnamigen Paper (2010) von <br /> Inge Li Gørtz, Marco Molinaro, Viswanath Nagarajan und R. Ravi 
 		</div>
 		
-		<div style="width:1100px; height:50px; position:absolute; left:-100px; bottom:-20px; display:table; table-layout: fixed;" class="TeXFake">
+		<div style="width:1350px; height:50px; position:absolute; left:-60px; bottom:-20px; display:table; table-layout: fixed;" class="TeXFake">
 		<div style="width:33%; background-color:#000000; color:#FFFFFF; text-align:right; font-size:55%; padding:10px 30px; font-weight:bold; display:table-cell;">Lukas Graf</div>
 		<div style="background-color:#3333B2; color:#FFFFFF; text-align:left; font-size:55%; padding:10px 30px; font-weight:bold; display:table-cell;">Seminar: Spieltheorie und Approximationsalgorithmen</div>
 		</div>
 	</div>
 	
-	<div id="Problems" class="step" data-x="-1000" data-y="0">
+	<div id="Problems" class="step" data-x="-1300" data-y="0">
 		<h2>Problem-Definitionen</h2>
 		<div class="problem substep" style="transform:scale(.5); width:50%; margin:auto;">
 			<h1>(Metrisches) TSP</h1>
@@ -63,7 +63,11 @@
 				<li>Metrik \(d: V\times V \to \mathbb{R}_{\geq 0}\)</li>
 			</ul>
 		</div>
-			
+		
+		<img src="Bilder/TSP1.svg" class="substep" style="position:absolute; left:500px; top:400px; width:200px;"/>
+		<img src="Bilder/TSP2.svg" class="substep" style="position:absolute; left:500px; top:400px; width:200px;"/>	
+		<img src="Bilder/TSP3.svg" class="substep" style="position:absolute; left:500px; top:400px; width:200px;"/>	
+		
 	</div>
 
 	<div id="Algorithm-Overview" class="step" data-x="0" data-y="0">
@@ -93,9 +97,14 @@
 				
 	</div>
 	
-    <div id="overview" class="step" data-x="-500" data-y="100" data-scale="1.7" data-rotate-x="-20">
-    </div>
-
+    <div id="overview" class="step" data-x="-700" data-y="300" data-scale="2" data-rotate-x="-20"></div>
+	
+	<div id="credits" class="step" data-x="-700" data-y="1200" data-scale="1.9" data-rotate-x="-20"><h4>Quellen:</h4>
+		<ul style="padding-left:40px;">
+			<li>Quelle 1</li>
+			<li>Quelle 2</li>
+		</ul>
+	</div>
 </div>
 
 </div>
