--- a/Präsentation/Presentation.html
+++ b/Präsentation/Presentation.html
@@ -62,9 +62,11 @@
 
 <div style="position:absolute; right:0px; width:100%; height:100%; overflow:hidden;" class="impress-container">
 <div id="impress">
-
+	<div id="LoadScreen" class="step" data-x="-920" data-y="135" data-scale=".5">
+	</div>
+	
 	<div id="TitlePage" class="step" data-x="-920" data-y="135" data-scale=".5">
-		<div style="width:1400px; height:200px; background:linear-gradient(to right, #3333B2, #000000); position:absolute; left:-100px; top:-100px; box-shadow: 10px 10px 8px #868686;" class="TeXFake"></div>
+		<div style="width:1400px; height:200px; background:linear-gradient(to right, darkgreen, #000000); position:absolute; left:-100px; top:-100px; box-shadow: 10px 10px 8px #868686;" class="TeXFake"></div>
 		<div class="problem TeXFakeShadow" style="margin:150px auto 50px auto; width:500px; ">
 			<h1>Heterogenes \(k\)-CVRP</h1>
 		</div>
@@ -75,7 +77,7 @@
 		
 		<div style="width:1400px; height:50px; position:absolute; left:-100px; bottom:-20px; display:table; table-layout: fixed;" class="TeXFake">
 		<div style="width:33%; background-color:#000000; color:#FFFFFF; text-align:right; font-size:55%; padding:10px 30px; font-weight:bold; display:table-cell;">Lukas Graf</div>
-		<div style="background-color:#3333B2; color:#FFFFFF; text-align:left; font-size:55%; padding:10px 30px; font-weight:bold; display:table-cell;">Seminar: Spieltheorie und Approximationsalgorithmen</div>
+		<div style="background-color:darkgreen; color:#FFFFFF; text-align:left; font-size:55%; padding:10px 30px; font-weight:bold; display:table-cell;">Seminar: Spieltheorie und Approximationsalgorithmen</div>
 		</div>
 	</div>
 	
@@ -195,14 +197,15 @@
      ###############   Blackbox    ###########################################################################################
 	 #################################################################################################################### -->
 	
-	<div id="Blackbox" class="step" data-x="-1330" data-y="190" data-scale=".3" style="border:2px #abcdef solid; color:#FFFFFF;">
+	<div id="Blackbox" class="step" data-x="-1330" data-y="190" data-scale=".3" style="color:#FFFFFF;">
 		<div class="substep" style="position:absolute; right:100px; bottom:100px; width:25%; text-align:right;">
 			Instanz \(\Ic\) von \(\HetCVRP\)
 		</div>
 		
 		<img src="Bilder/PfeilWeiß.svg" width="400" style="position:absolute; right:340px; bottom:140px; transform: scale(-1, -1);" />
-		<div class="substep" style="position:absolute; right:440px; bottom:200px; text-align:center;">
-			BILD<br /><br />Reduktion
+		<div class="substep" style="position:absolute; right:400px; bottom:200px; text-align:center;">
+			<img src="Bilder/Reduktion.svg" width="300" /><br />
+			Reduktion
 		</div>
 		
 		<div class="substep" style="position:absolute; left:100px; bottom:100px; width:50%; text-align:left;">
