--- a/Präsentation/Presentation.html
+++ b/Präsentation/Presentation.html
@@ -237,13 +237,18 @@
 				
 	</div>
 
-	<div id="Zerlegung-Close" class="step" data-x="-230" data-y="200" data-scale=".45">
+	<div id="Zerlegung-Close" class="step" data-x="-320" data-y="50" data-scale=".5">
 		<br /><br />
 		<span class="substep">Details zur Zerlegung...</span>
 	</div>
 	
 	<div id="Algorithm-Overview3" class="step" data-x="0" data-y="0">
 				
+	</div>
+		
+	<div id="Zuweisung-Close" class="step" data-x="-320" data-y="200" data-scale=".5">
+		<br /><br />
+		<span class="substep">Details zur Zuweisung...</span>
 	</div>
 
 
