--- a/Präsentation/Presentation.html
+++ b/Präsentation/Presentation.html
@@ -352,7 +352,12 @@
 			\((\sigma_i)\) Lsg von \(\HetCVRP\) mit<br />
 			\(\max \frac{d(\sigma_i)}{\lambda_i} \in \Oc(1)\cdot \max \frac{d(\tau_i)}{\lambda_i}\)
 		</div>
-	</div>		
+	</div>
+
+
+	<div id="Problems-Overview" class="step" style="display:none;" data-x="-1300" data-y="0">
+	
+	</div>
 		
 	
 <!-- ########################################################################################################################
@@ -364,10 +369,10 @@
 	<div id="Credits" class="step" data-x="-700" data-y="1200" data-scale="1.9" data-rotate-x="-20">
 		<div style="padding-left:50px;"><h4>Quellen:</h4>
 		<ul style="padding-left:40px; font-size:70%;">
-			<li><strong><a href="http://arxiv.org/abs/1012.1850">Capacitated Vehicle Routing with Non-Uniform Speeds</a> (2010) - Inge Li Gørtz u.a.</strong></li>
-			<li><a href="http://www.jstor.org/stable/3689422">Mathematics of Operations Research 10.4</a> (1985) - M. Haimovich und A. H. G. Rinnooy Kan</li>
-			<li><a href="https://books.google.de/books?id=tarLTNwM3gEC">Combinatorial Optimization</a> (2011) - W.J. Cook u.a.</li>
-			<li><a href="http://dx.doi.org/10.1007/BF01585745">Approximation algorithms for scheduling unrelated parallel machines</a> (1990) - Jan Karel Lenstra u.a.</li>
+			<li><strong><a href="http://arxiv.org/abs/1012.1850">Capacitated Vehicle Routing with Non-Uniform Speeds</a> (2010) - I. L. Gørtz, M. Molinaro, V. Nagarajan, R. Ravi</strong></li>
+			<li><a href="http://www.jstor.org/stable/3689422">Bounds and Heuristics for Capacitated Routing Problems</a> (1985) - M. Haimovich, A. H. G. Rinnooy Kan</li>
+			<li><a href="https://books.google.de/books?id=tarLTNwM3gEC">Combinatorial Optimization</a> (2011) - W.J. Cook, W. H. Cunningham, W. R. Pulleyblank, A. Schrijver</li>
+			<li><a href="http://dx.doi.org/10.1007/BF01585745">Approximation algorithms for scheduling unrelated parallel machines</a> (1990) - J. K. Lenstra, D. B. Shmoys, É. Tardos</li>
 		</ul></div>
 	</div>
 	
