Serifenlose Schriftart in Bildern

--- a/Präsentation/Presentation.html
+++ b/Präsentation/Presentation.html
@@ -316,8 +316,8 @@
 	<div id="Zuweisung-Close" class="step" data-x="-1620" data-y="250" data-scale=".5">
 		<img src="Bilder/FractionalAssignment.svg" width="850" style="position:absolute; right:0px; top:150px;" />
 		
-		<div class="theoremstyletop d" style="position:absolute; left:0px; top:550px; width:600px;">
-			\((x_{Ti})\) ist \(L\)-sättigendes \(b\)-Matching,  falls<br />
+		<div class="theoremstyletop d" style="position:absolute; left:20px; top:550px; width:600px;">
+			\((x_{Ti})\) ist \(L\)-sättigendes \(b\)-Matching, wenn gilt:<br />
 			\(\quad\sum_i x_{Ti} = b(T),\quad \sum_T x_{Ti} \leq b(i),\quad x_{Ti}\in\NN\)
 		</div>
 		
