Beispiel-Bilder für die Probleme

--- a/Präsentation/Presentation.html
+++ b/Präsentation/Presentation.html
@@ -82,6 +82,7 @@
 	</div>
 	
 	<div id="Problems" class="step" data-x="100" data-y="0">
+		<img src="Bilder/HetCVRP.svg" class="substep" style="position:absolute; left:425px; top:150px; width:350px;"/>
 		
 	<!-- #################### Metrisches TSP ############################# -->
 		<div class="substep" style="position:absolute; left:100px; top:10px; width:300px;  height:100px;">
@@ -91,17 +92,14 @@
 		<div class="substep problemdef e" style="left:0px; top:60px;">
 			Vollst. Graph \(G=(V,E)\) mit <br />metr. Abstandsfkt. \(d: E \to \mathbb{R}_{\geq 0}\)
 		</div>
-		<img src="Bilder/TSP1.svg" class="substep" style="position:absolute; left:450px; top:250px; width:250px;"/>
 
 		<div class="substep problemdef" style="left:0px; top:130px;">
 			und Startpunkt/Depot \(s \in V\)
 		</div>
-		<img src="Bilder/TSP2.svg" class="substep" style="position:absolute; left:450px; top:250px; width:250px;"/>	
 
 		<div class="substep problemdef l" style="left:0px; top:170px;">
 			Tour \(\tau\) durch ganz \(V\)
 		</div>
-		<img src="Bilder/TSP3.svg" class="substep" style="position:absolute; left:450px; top:250px; width:250px;"/>	
 		
 		<div class="substep problemdef z" style="left:0px; top:210px;">
 			Minimiere \(d(\tau)\)
@@ -173,7 +171,7 @@
 			\(\exists \mathcal{O}(1)\)-approx. Algorithmus
 		</div>
 		
-		<div class="substep" style="position:absolute; top:195px; left:420px;">
+<!--		<div class="substep" style="position:absolute; top:195px; left:420px;">
 			<img src="Bilder/Pfeil.svg" width="370" style="position:absolute; top:55px; left:0px;" />
 			<div style="position:absolute; top:0px; left:70px; width:190px; height:40px; font-weight:bold; text-align:center; padding:30px 15px;">
 				Tour-Splitting
@@ -189,7 +187,7 @@
 				Blackbox
 			</div>		
 			<img src="Bilder/Pfeil.svg" width="430" style="position:absolute; top:200px; left:-60px;" />
-		</div>
+		</div>-->
 	</div>
 
 	
@@ -380,7 +378,7 @@
 	
 	</div>
 	 
-	<div id="Blackbox" class="step" data-x="70" data-y="190" data-scale=".3" style="color:#FFFFFF;">
+<!--	<div id="Blackbox" class="step" data-x="70" data-y="190" data-scale=".3" style="color:#FFFFFF;">
 		<div class="substep" style="position:absolute; right:100px; bottom:100px; width:25%; text-align:right;">
 			Instanz \(\Ic\) von \(\HetCVRP\)
 		</div>
@@ -417,7 +415,7 @@
 			\((\sigma_i)\) Lsg von \(\HetCVRP\) mit<br />
 			\(\max \frac{d(\sigma_i)}{\lambda_i} \in \Oc(1)\cdot \max \frac{d(\tau_i)}{\lambda_i}\)
 		</div>
-	</div>
+	</div>-->
 
 
 	<div id="Problems-Overview2" class="step" style="display:none;" data-x="100" data-y="0">
