--- a/Präsentation/Presentation.html
+++ b/Präsentation/Presentation.html
@@ -82,7 +82,20 @@
 	</div>
 	
 	<div id="Problems" class="step" data-x="100" data-y="0">
-		<img src="Bilder/HetCVRP.svg" class="substep" style="position:absolute; left:425px; top:150px; width:350px;"/>
+		<img src="Bilder/TSP0.svg" class="substep" style="position:absolute; left:425px; top:150px; width:350px;"/>
+		<img src="Bilder/TSP1.svg" class="substep" style="position:absolute; left:425px; top:150px; width:350px;"/>
+		<img src="Bilder/TSP2.svg" class="substep" style="position:absolute; left:425px; top:150px; width:350px;"/>
+		<img src="Bilder/CVRP0.svg" class="substep" style="position:absolute; left:425px; top:150px; width:350px; background-color:white;"/>
+		<img src="Bilder/CVRP1.svg" class="substep" style="position:absolute; left:425px; top:150px; width:350px;"/>
+		<img src="Bilder/CVRP2.svg" class="substep" style="position:absolute; left:425px; top:150px; width:350px;"/>
+		<img src="Bilder/CVRP3.svg" class="substep" style="position:absolute; left:425px; top:150px; width:350px;"/>
+		<img src="Bilder/HetTSP0.svg" class="substep" style="position:absolute; left:425px; top:150px; width:350px; background-color:white;"/>
+		<img src="Bilder/HetTSP1.svg" class="substep" style="position:absolute; left:425px; top:150px; width:350px;"/>
+		<img src="Bilder/HetTSP2.svg" class="substep" style="position:absolute; left:425px; top:150px; width:350px;"/>
+		<img src="Bilder/HetCVRP0.svg" class="substep" style="position:absolute; left:425px; top:150px; width:350px; background-color:white;"/>
+		<img src="Bilder/HetCVRP1.svg" class="substep" style="position:absolute; left:425px; top:150px; width:350px;"/>
+		<img src="Bilder/HetCVRP2.svg" class="substep" style="position:absolute; left:425px; top:150px; width:350px;"/>
+		<img src="Bilder/SkizzenVerdeckung.svg" class="substep" style="position:absolute; left:425px; top:150px; width:350px;"/>
 		
 	<!-- #################### Metrisches TSP ############################# -->
 		<div class="substep" style="position:absolute; left:100px; top:10px; width:300px;  height:100px;">
@@ -228,7 +241,14 @@
 	<!-- #################### Level-Prime ############################# -->
 	
 	<div id="Level-Prime-Close" class="step" data-x="-1620" data-y="-170" data-scale=".5">
-		<img src="Bilder/LevelPrime.svg" width="500" style="position:absolute; left:1000px; top:30px;" />
+		<img src="Bilder/LevelPrime0.svg" class="substep" width="500" style="position:absolute; left:1000px; top:30px;" />
+		<img src="Bilder/LevelPrime1.svg" class="substep" width="500" style="position:absolute; left:1000px; top:30px;" />
+		<img src="Bilder/LevelPrime2.svg" class="substep" width="500" style="position:absolute; left:1000px; top:30px;" />
+		<img src="Bilder/LevelPrime3.svg" class="substep" width="500" style="position:absolute; left:1000px; top:30px;" />
+		<img src="Bilder/LevelPrime4.svg" class="substep" width="500" style="position:absolute; left:1000px; top:30px;" />
+		<img src="Bilder/LevelPrime5.svg" class="substep" width="500" style="position:absolute; left:1000px; top:30px;" />
+		<img src="Bilder/LevelPrime6.svg" class="substep" width="500" style="position:absolute; left:1000px; top:30px;" />
+		<img src="Bilder/LevelPrime.svg" class="substep" width="500" style="position:absolute; left:1000px; top:30px; background-color:white;" />
 	
 		<div class="substep code" style="position:absolute; left:40px; top:170px; width:1000px;"><span class="numbering">(a)</span>&nbsp;
 			\(V_0 := \left\lbrace v\in V \mid d(s,v) \leq M\right\rbrace, V_l := \left\lbrace v \in V \mid 2^{l-1}M \lt d(s,v) \leq 2^l M\right\rbrace\)
@@ -260,7 +280,12 @@
 	<!-- #################### Decomposition ############################# -->
 	
 	<div id="Zerlegung-Close" class="step" data-x="-1620" data-y="-20" data-scale=".5">
-		<img src="Bilder/Decomposition.svg" width="500" style="position:absolute; left:1000px; top:140px;" />
+		<img src="Bilder/Decomposition0.svg" class="substep" width="500" style="position:absolute; left:1000px; top:140px;" />
+		<img src="Bilder/Decomposition1.svg" class="substep" width="500" style="position:absolute; left:1000px; top:140px;" />
+		<img src="Bilder/Decomposition2.svg" class="substep" width="500" style="position:absolute; left:1000px; top:140px;" />
+		<img src="Bilder/Decomposition3.svg" class="substep" width="500" style="position:absolute; left:1000px; top:140px; background-color:white;" />
+		<img src="Bilder/Decomposition4.svg" class="substep" width="500" style="position:absolute; left:1000px; top:140px; background-color:white;" />
+		<img src="Bilder/Decomposition5.svg" class="substep" width="500" style="position:absolute; left:1000px; top:140px;" />
 		
 		<div class="substep code" style="position:absolute; left:40px; top:100px; width:1200px;"><span class="numbering">(a)</span>&nbsp;
 			\(\Sc_0 := \left\lbrace H_0 \right\rbrace,\quad \Sc_l :=\) Zerl. von \(\Hc\cap (V_l\times V_{\leq l})\) in Bäume <br />
@@ -312,7 +337,11 @@
 	<!-- #################### FractionalAssignment ############################# -->
 	
 	<div id="Zuweisung-Close" class="step" data-x="-1620" data-y="250" data-scale=".5">
-		<img src="Bilder/FractionalAssignment.svg" width="850" style="position:absolute; right:0px; top:150px;" />
+		<img src="Bilder/FractionalAssignment0.svg" class="substep" width="850" style="position:absolute; right:0px; top:150px;" />
+		<img src="Bilder/FractionalAssignment1.svg" class="substep" width="850" style="position:absolute; right:0px; top:150px;" />
+		<img src="Bilder/FractionalAssignment2.svg" class="substep" width="850" style="position:absolute; right:0px; top:150px;" />
+		<img src="Bilder/FractionalAssignment3.svg" class="substep" width="850" style="position:absolute; right:0px; top:150px;" />
+		<img src="Bilder/FractionalAssignment4.svg" class="substep" width="850" style="position:absolute; right:0px; top:150px;" />
 		
 		<div class="theoremstyletop d" style="position:absolute; left:20px; top:550px; width:600px;">
 			\((x_{Ti})\) ist \(L\)-sättigendes \(b\)-Matching, wenn gilt:<br />
@@ -337,7 +366,11 @@
 			\( (\Tc_i)_{i\geq 0}\) ist \( (\alpha, \beta) \)-zuweisbar \(\Rightarrow \left(\tau_i\right)\) ist \((4\alpha+2\beta)\)-approximativ
 		</div>
 		
-		<img src="Bilder/RoundingAssignment.svg" width="650" style="position:absolute; left:270px; top:170px;" />
+		<img src="Bilder/RoundingAssignment0.svg" class="substep" width="650" style="position:absolute; left:270px; top:170px;" />
+		<img src="Bilder/RoundingAssignment1.svg" class="substep" width="650" style="position:absolute; left:270px; top:170px;" />
+		<img src="Bilder/RoundingAssignment2.svg" class="substep" width="650" style="position:absolute; left:270px; top:170px;" />
+		<img src="Bilder/RoundingAssignment3.svg" class="substep" width="650" style="position:absolute; left:270px; top:170px;" />
+		<img src="Bilder/RoundingAssignment4.svg" class="substep" width="650" style="position:absolute; left:270px; top:170px;" />
 		
 		<div style="position:absolute; left:820px; top:170px; width:400px; color:#800080;">
 			\(i\) zugewiesener Anteil von \(T\)
